add token expiration check

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 JWT_SECRET=CHURROS
+JWT_EXP=3600
+USER_DB_PATH=./stores/user_db
+ACCOUNT_DB_PATH=./stores/account_db
+ID_TRACKER_DB_PATH=./stores/id_tracker_db
+TRANSACTION_DB_PATH=./stores/transaction_db
